<resources>
    <string name="app_name">J-Fit</string>
    <string name="title_home">Inicio</string>
    <string name="title_training">Entrenar</string>
    <string name="title_metrics">Métricas</string>
    <string name="title_profile">Perfil</string>

    <!-- Textos para la pantalla de Entrenar -->
    <string name="title_routines">Rutinas</string>
    <string name="title_sports">Deportes</string>
    <string name="title_exercises">Ejercicios</string>
    <string name="title_exercise_params">Parámetros</string>
    <string name="title_import_export">Importar/Exportar</string>

    <!-- Textos adicionales -->
    <string name="routine_name">Nombre de la rutina</string>
    <string name="routine_description">Descripción</string>
    <string name="select_sport">Seleccionar deporte</string>
    <string name="create_routine">Crear rutina</string>
    <string name="title_edit_routine">Editar Rutina</string>
    <string name="title_create_routine">Crear Rutina</string>
    <string name="title_add_exercises">Agregar Ejercicios</string>

    <!-- Textos para las tarjetas de entrenamiento -->
    <string name="training_routines_description">Administra tus rutinas de entrenamiento</string>
    <string name="training_sports_description">Gestiona los deportes disponibles</string>
    <string name="training_exercises_description">Administra los ejercicios</string>
    <string name="training_params_description">Configura parámetros de ejercicios</string>
    <string name="training_import_export_description">Importa y exporta rutinas</string>


    <string name="title_create_sport">Crear Deporte</string>
    <string name="title_create_parameter">Crear Parámetro</string>
    <string name="title_edit_parameter">Editar Parámetro</string>
    <string name="title_categories">Categorías</string>
    <string name="categories_description">"Crea y gestiona categorias "</string>

    <string name="exercise_name">Nombre del ejercicio</string>
    <string name="exercise_description">Descripción</string>
    <string name="select_exercise_type">Seleccionar tipo de ejercicio</string>
    <string name="select_sport_for_exercise">Seleccionar deporte</string>
    <string name="create_exercise">Crear ejercicio</string>
    <string name="edit_exercise">Editar ejercicio</string>
    <string name="exercise_detail">Detalle del ejercicio</string>

    <!-- Feedback -->
    <string name="feedback_title">Ayuda y feedback</string>
    <string name="feedback_row_title">Ayuda y feedback</string>
    <string name="feedback_row_subtitle">Reportar errores o sugerencias</string>
    <string name="feedback_intro">Tu opinión nos ayuda a mejorar JNOBFIT. Cuéntanos qué ha fallado o qué te gustaría ver en la app.</string>
    <string name="feedback_intro_note">Revisamos todos los envíos en beta. Te enviaremos un correo de confirmación con tu referencia.</string>
    <string name="feedback_type_label">Tipo de envío</string>
    <string name="feedback_type_bug">Reportar error</string>
    <string name="feedback_type_suggestion">Sugerencia</string>
    <string name="feedback_category_label">Categoría</string>
    <string name="feedback_title_optional">Título (opcional)</string>
    <string name="feedback_message_label">Mensaje</string>
    <string name="feedback_steps_label">Pasos para reproducir (opcional)</string>
    <string name="feedback_technical_checkbox">Incluir datos técnicos del dispositivo</string>
    <string name="feedback_submit">Enviar</string>
    <string name="feedback_submit_uppercase">ENVIAR FEEDBACK</string>
    <string name="feedback_submitting">Enviando…</string>
    <string name="feedback_message_min_length">El mensaje debe tener al menos 10 caracteres</string>
    <string name="feedback_success_title">¡Gracias!</string>
    <string name="feedback_success_message">Hemos recibido tu envío correctamente.\n\nReferencia #%1$d.\n\nTe hemos enviado un correo de confirmación. En beta revisamos todos los envíos.</string>
    <string name="feedback_error_title">No se pudo enviar</string>
    <string name="feedback_error_generic">Inténtalo de nuevo más tarde.</string>
</resources>