<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Menú principal -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fitapp.appfit.feature.home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_workout"
            app:destination="@id/navigation_workout" />
        <action
            android:id="@+id/action_home_to_edit_routine"
            app:destination="@id/navigation_edit_routine" />
        <action
            android:id="@+id/action_home_to_routine_exercises"
            app:destination="@id/navigation_routine_exercises" />
    </fragment>

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.fitapp.appfit.feature.training.ui.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_metrics"
        android:name="com.fitapp.appfit.feature.metrics.ui.MetricsFragment"
        android:label="@string/title_metrics"
        tools:layout="@layout/fragment_metrics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.fitapp.appfit.feature.profile.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_workout_preferences"
            app:destination="@id/navigation_workout_preferences" />
    </fragment>

    <!-- Rutinas -->
    <fragment
        android:id="@+id/navigation_routines"
        android:name="com.fitapp.appfit.feature.routine.ui.list.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routines_list">
        <action
            android:id="@+id/action_navigation_routines_to_navigation_edit_routine"
            app:destination="@id/navigation_edit_routine" />
        <action
            android:id="@+id/action_navigation_routines_to_navigation_workout"
            app:destination="@id/navigation_workout" />
        <action
            android:id="@+id/action_navigation_routines_to_routine_exercises"
            app:destination="@id/navigation_routine_exercises" />
    </fragment>

    <!-- Lista de ejercicios de la rutina -->
    <fragment
        android:id="@+id/navigation_routine_exercises"
        android:name="com.fitapp.appfit.feature.routine.ui.exercises.RoutineExercisesFragment"
        android:label="Ejercicios de la rutina"
        tools:layout="@layout/fragment_routine_exercises">
        <argument
            android:name="routineId"
            app:argType="long" />
        <action
            android:id="@+id/action_routine_exercises_to_add_exercises"
            app:destination="@id/navigation_add_exercises_to_routine" />
        <action
            android:id="@+id/action_routine_exercises_to_edit_exercise"
            app:destination="@id/navigation_edit_exercise_in_routine" />
        <action
            android:id="@+id/action_routine_exercises_to_routine_sets"
            app:destination="@id/navigation_routine_sets" />
    </fragment>

    <!-- Editar ejercicio dentro de una rutina -->
    <fragment
        android:id="@+id/navigation_edit_exercise_in_routine"
        android:name="com.fitapp.appfit.feature.routine.ui.exercises.EditExerciseInRoutineFragment"
        android:label="Editar Ejercicio"
        tools:layout="@layout/fragment_edit_exercise_in_routine">
        <argument
            android:name="routineId"
            app:argType="long" />
        <argument
            android:name="routineExerciseId"
            app:argType="long" />
        <argument
            android:name="exerciseId"
            app:argType="long" />
        <argument
            android:name="exerciseName"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="dayOfWeek"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="sessionOrder"
            app:argType="integer"
            android:defaultValue="1" />
        <argument
            android:name="restAfterExercise"
            app:argType="integer"
            android:defaultValue="60" />
        <argument
            android:name="trainingDays"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!-- Añadir ejercicios a rutina -->
    <fragment
        android:id="@+id/navigation_add_exercises_to_routine"
        android:name="com.fitapp.appfit.feature.routine.ui.exercises.AddExercisesToRoutineFragment"
        android:label="Agregar Ejercicio"
        tools:layout="@layout/fragment_add_exercises_to_routine">
        <argument
            android:name="routineId"
            app:argType="long" />
        <argument
            android:name="exerciseId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.fitapp.appfit.feature.workout.ui.WorkoutFragment"
        android:label="Entrenamiento"
        tools:layout="@layout/fragment_workout">
        <argument
            android:name="routineId"
            app:argType="long" />
        <action
            android:id="@+id/action_workout_to_preferences"
            app:destination="@id/navigation_workout_preferences" />
    </fragment>

    <fragment
        android:id="@+id/navigation_workout_preferences"
        android:name="com.fitapp.appfit.feature.workout.ui.WorkoutPreferencesFragment"
        android:label="Configuración"
        tools:layout="@layout/fragment_workout_preferences" />

    <fragment
        android:id="@+id/navigation_routine_sets"
        android:name="com.fitapp.appfit.feature.routine.ui.sets.RoutineSetsFragment"
        android:label="Sets del ejercicio"
        tools:layout="@layout/fragment_routine_sets">
        <argument
            android:name="routineExerciseId"
            app:argType="long" />
        <argument
            android:name="exerciseId"
            app:argType="long" />
        <action
            android:id="@+id/action_routine_sets_to_add_edit_set"
            app:destination="@id/navigation_add_edit_set" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_edit_set"
        android:name="com.fitapp.appfit.feature.routine.ui.sets.AddEditSetFragment"
        android:label="Nuevo Set"
        tools:layout="@layout/fragment_add_edit_set">
        <argument
            android:name="routineExerciseId"
            app:argType="long" />
        <argument
            android:name="exerciseId"
            app:argType="long" />
        <argument
            android:name="setId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sports"
        android:name="com.fitapp.appfit.feature.sport.ui.SportsFragment"
        android:label="@string/title_sports"
        tools:layout="@layout/fragment_sports" />

    <!-- EJERCICIOS -->
    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.fitapp.appfit.feature.exercise.ui.list.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises">
        <action
            android:id="@+id/action_navigation_exercises_to_create_exercise"
            app:destination="@id/navigation_create_exercise" />
        <action
            android:id="@+id/action_navigation_exercises_to_edit_exercise"
            app:destination="@id/navigation_edit_exercise">
            <argument
                android:name="exerciseId"
                app:argType="long" />
        </action>
        <action
            android:id="@+id/action_navigation_exercises_to_exercise_detail"
            app:destination="@id/navigation_exercise_detail">
            <argument
                android:name="exerciseId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_create_exercise"
        android:name="com.fitapp.appfit.feature.exercise.ui.form.CreateExerciseFragment"
        android:label="Crear Ejercicio"
        tools:layout="@layout/fragment_create_exercise" />

    <fragment
        android:id="@+id/navigation_edit_exercise"
        android:name="com.fitapp.appfit.feature.exercise.ui.form.EditExerciseFragment"
        android:label="Editar Ejercicio"
        tools:layout="@layout/fragment_edit_exercise">
        <argument
            android:name="exerciseId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exercise_detail"
        android:name="com.fitapp.appfit.feature.exercise.ui.detail.ExerciseDetailFragment"
        android:label="Detalle Ejercicio"
        tools:layout="@layout/fragment_exercise_detail">
        <argument
            android:name="exerciseId"
            app:argType="long" />
        <action
            android:id="@+id/action_exercise_detail_to_edit_exercise"
            app:destination="@id/navigation_edit_exercise">
            <argument
                android:name="exerciseId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_import_export"
        android:name="com.fitapp.appfit.feature.importexport.ui.ImportExportFragment"
        android:label="@string/title_import_export"
        tools:layout="@layout/fragment_import_export" />

    <fragment
        android:id="@+id/navigation_create_routine"
        android:name="com.fitapp.appfit.feature.routine.ui.form.CreateRoutineFragment"
        android:label="@string/title_create_routine"
        tools:layout="@layout/fragment_create_routine" />

    <fragment
        android:id="@+id/navigation_add_exercises"
        android:name="com.fitapp.appfit.feature.routine.ui.exercises.AddExercisesToRoutineFragment"
        android:label="@string/title_add_exercises"
        tools:layout="@layout/fragment_add_exercises_to_routine" />

    <fragment
        android:id="@+id/navigation_edit_routine"
        android:name="com.fitapp.appfit.feature.routine.ui.form.EditRoutineFragment"
        android:label="@string/title_edit_routine"
        tools:layout="@layout/fragment_edit_routine">
        <argument
            android:name="routineId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exercise_params"
        android:name="com.fitapp.appfit.feature.parameter.ui.ExerciseParamsFragment"
        android:label="Parámetros"
        tools:layout="@layout/fragment_exercise_params" />

    <fragment
        android:id="@+id/navigation_create_parameter"
        android:name="com.fitapp.appfit.feature.parameter.ui.CreateParameterFragment"
        android:label="@string/title_create_parameter"
        tools:layout="@layout/fragment_create_parameter" />

    <fragment
        android:id="@+id/navigation_edit_parameter"
        android:name="com.fitapp.appfit.feature.parameter.ui.EditParameterFragment"
        android:label="@string/title_edit_parameter"
        tools:layout="@layout/fragment_edit_parameter">
        <argument
            android:name="parameterId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exercise_categories"
        android:name="com.fitapp.appfit.feature.exercise.ui.category.ExerciseCategoriesFragment"
        android:label="Categorías"
        tools:layout="@layout/fragment_exercise_categories" />

    <fragment
        android:id="@+id/navigation_create_category"
        android:name="com.fitapp.appfit.feature.exercise.ui.category.CreateCategoryFragment"
        android:label="Crear Categoría"
        tools:layout="@layout/fragment_create_category" />

    <fragment
        android:id="@+id/navigation_edit_category"
        android:name="com.fitapp.appfit.feature.exercise.ui.category.EditCategoryFragment"
        android:label="Editar Categoría"
        tools:layout="@layout/fragment_edit_category">
        <argument
            android:name="categoryId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_subscription"
        android:name="com.fitapp.appfit.feature.subscription.ui.SubscriptionFragment"
        android:label="Mi suscripción"
        tools:layout="@layout/fragment_subscription" />

    <fragment
        android:id="@+id/navigation_plans"
        android:name="com.fitapp.appfit.feature.subscription.ui.PlansFragment"
        android:label="Planes"
        tools:layout="@layout/fragment_plans" />


    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="com.fitapp.appfit.feature.marketplace.ui.list.MarketplaceFragment"
        android:label="Marketplace"
        tools:layout="@layout/fragment_marketplace">
        <action
            android:id="@+id/action_navigation_marketplace_to_package_detail"
            app:destination="@id/navigation_package_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_package_detail"
        android:name="com.fitapp.appfit.feature.marketplace.ui.detail.PackageDetailFragment"
        android:label="Paquete"
        tools:layout="@layout/fragment_package_detail">
        <argument
            android:name="packageId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_packages"
        android:name="com.fitapp.appfit.feature.marketplace.ui.list.MyPackagesFragment"
        android:label="Mis Paquetes"
        tools:layout="@layout/fragment_my_packages">
        <action
            android:id="@+id/action_my_packages_to_create_package"
            app:destination="@id/navigation_create_package" />
        <action
            android:id="@+id/action_my_packages_to_edit_package"
            app:destination="@id/navigation_edit_package">
            <argument
                android:name="packageId"
                app:argType="long" />
        </action>
        <action
            android:id="@+id/action_my_packages_to_package_detail"
            app:destination="@id/navigation_package_detail">
            <argument
                android:name="packageId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_create_package"
        android:name="com.fitapp.appfit.feature.marketplace.ui.form.CreatePackageFragment"
        android:label="Crear Paquete"
        tools:layout="@layout/fragment_create_package">
        <action
            android:id="@+id/action_create_package_to_add_items"
            app:destination="@id/navigation_add_package_items">
            <argument
                android:name="packageId"
                app:argType="long" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_add_package_items"
        android:name="com.fitapp.appfit.feature.marketplace.ui.items.AddPackageItemsFragment"
        android:label="Agregar Items"
        tools:layout="@layout/fragment_add_package_items" />
    <fragment
        android:id="@+id/navigation_edit_package"
        android:name="com.fitapp.appfit.feature.marketplace.ui.form.EditPackageFragment"
        android:label="Editar Paquete"
        tools:layout="@layout/fragment_edit_package">
        <argument
            android:name="packageId"
            app:argType="long" />
    </fragment>
</navigation>